# legal-less

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-HK.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_SCHEMAS.md  PROJECT_SPEC.md
examples/: cause_list_template.csv  judgment_representations_template.csv
research/: phase1_findings.md  phase3_sources.md  phase6_real_validation.md
src/legalless/: __init__.py  cfa.py  cli.py  provenance.py  representation.py
tests/: test_cfa.py  test_cli.py  test_representation.py
tests/fixtures/: cause_list.csv  judgment_representations.csv  synthetic_hkcfa.txt
