[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "legal-less"
version = "0.1.0"
description = "Auditable HKCFA ratio decidendi locator and representation evidence mapper"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "LooperRA" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Indexing",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
legal-less = "legalless.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legalless"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
